# empleado1362

./: ProjectHome.md
Pruebas OpenGL-Bullet/: main
Pruebas OpenGL-Bullet/Bullet/: Makefile
Pruebas OpenGL-Bullet/Bullet/BulletCollision/: Makefile
Pruebas OpenGL-Bullet/Bullet/BulletMultiThreaded/: cmake_install.cmake
Pruebas OpenGL-Bullet/Bullet/BulletSoftBody/: cmake_install.cmake
Pruebas OpenGL-Bullet/Bullet/LinearMath/: Makefile
Pruebas OpenGL-Bullet/nbproject/: Makefile-Debug.mk  Makefile-variables.mk  configurations.xml  project.xml
empleado1362/: Makefile  resources.cfg
empleado1362/Media/materials/textures/: oficina_pared3.tga  oficina_suelo1.tga  oficina_suelo2.tga  protagonista.tga
empleado1362/Media/models/: Scene.material  monigote1.mesh  oficina_pared1.mesh  oficina_suelo1.mesh  oficina_suelo2.mesh  protagonista.mesh
empleado1362/datos/objetos/: oficina_pared1.xml
empleado1362/include/: Coordenada.h  InterfazGFX.h  InterfazIA.h  InterfazPSX.h  InterfazSND.h  Juego.h  ManejadorEventos.h  Nivel.h
empleado1362/lib/: InterfazGFX.cpp  InterfazIA.cpp  InterfazPSX.cpp  InterfazSND.cpp
empleado1362/lib/Bullet/: cmake_install.cmake
empleado1362/lib/Bullet/BulletCollision/: cmake_install.cmake
empleado1362/lib/Bullet/BulletDynamics/: Makefile  cmake_install.cmake
empleado1362/lib/Bullet/BulletDynamics/Dynamics/: btActionInterface.h
empleado1362/lib/Bullet/BulletSoftBody/: Makefile
empleado1362/nbproject/: Makefile-Debug.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
empleado1362/src/: CMakeLists.txt  Coordenada.cpp  InterfazGFX.cpp  InterfazPSX.cpp  Juego.cpp  ManejadorEventos.cpp  Nivel.cpp  Pantalla.cpp  main.cpp
modelos/alcantarilla_pared1/: alcantarilla_pared1.blend
modelos/alcantarilla_pared10/: alcantarilla_pared10.blend
modelos/alcantarilla_pared3/: alcantarilla_pared3.blend
modelos/alcantarilla_pared6/: alcantarilla_pared6.blend
modelos/alcantarilla_pared7/: alcantarilla_pared7.blend
modelos/alcantarilla_suelo1/: alcantarilla_suelo1.blend
modelos/alcantarilla_suelo2/: alcantarilla_suelo2.blend
modelos/alcantarilla_suelo5/: alcantarilla_suelo5.blend
modelos/alcantarilla_suelo6/: alcantarilla_suelo6.blend
modelos/cubiculo/: cubiculo.blend
modelos/escritorio/: escritorio.blend
modelos/lampara/: lampara.blend
modelos/oficina_pared1/: oficina_pared1.blend
modelos/oficina_pared2/: oficina_pared2.blend
modelos/oficina_pared3/: oficina_pared3.blend
modelos/oficina_pared5/: oficina_pared5.blend
modelos/oficina_pared6/: oficina_pared6.blend
modelos/oficina_suelo1/: oficina_suelo1.blend
modelos/ordenadorprincipal/: ordenadorprincipal.blend
trunk/Pruebas OpenGL-Bullet/: Makefile  main.cpp
trunk/Pruebas OpenGL-Bullet/Bullet/BulletMultiThreaded/: Makefile
trunk/Pruebas OpenGL-Bullet/Bullet/LinearMath/: cmake_install.cmake
trunk/Pruebas OpenGL-Bullet/nbproject/: Makefile-Release.mk  Makefile-impl.mk  Package-Debug.bash  Package-Release.bash
trunk/empleado1362/: CMakeLists.txt  Makefile  ogre.cfg
trunk/empleado1362/Media/materials/textures/: monigote1.tga  monigote2.tga  oficina_pared1.tga  oficina_suelo1.tga  oficina_suelo2.tga
trunk/empleado1362/Media/models/: Scene.material  monigote2.mesh  oficina_pared3.mesh
trunk/empleado1362/datos/niveles/1/: 1.xml  info.xml
trunk/empleado1362/include/: FrameListener.h  InterfazGFX.h  InterfazIA.h  InterfazINF.h  InterfazPSX.h  InterfazSND.h  Juego.h  MEFrameListener.h  Matriz.h  Pantalla.h
trunk/empleado1362/lib/: InterfazINF.cpp  Juego.cpp  ManejadorEventos.cpp
trunk/empleado1362/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  configurations.xml  project.xml
trunk/empleado1362/src/: InterfazGFX.cpp  InterfazIA.cpp  InterfazINF.cpp  InterfazPSX.cpp  InterfazSND.cpp  Juego.cpp  Nivel.cpp
trunk/modelos/alcantarilla_pared11/: alcantarilla_pared11.blend
trunk/modelos/alcantarilla_pared12/: alcantarilla_pared12.blend
trunk/modelos/alcantarilla_pared13/: alcantarilla_pared13.blend
trunk/modelos/alcantarilla_pared2/: alcantarilla_pared2.blend
trunk/modelos/alcantarilla_pared4/: alcantarilla_pared4.blend
trunk/modelos/alcantarilla_pared5/: alcantarilla_pared5.blend
trunk/modelos/alcantarilla_pared8/: alcantarilla_pared8.blend
trunk/modelos/alcantarilla_pared9/: alcantarilla_pared9.blend
trunk/modelos/alcantarilla_suelo3/: alcantarilla_suelo3.blend
trunk/modelos/alcantarilla_suelo4/: alcantarilla_suelo4.blend
trunk/modelos/armario/: armario.blend
trunk/modelos/camara/: camara.blend
trunk/modelos/oficina_pared4/: oficina_pared4.blend
trunk/modelos/oficina_suelo2/: oficina_suelo2.blend
trunk/modelos/papelera/: papelera.blend
trunk/modelos/sillon/: sillon.blend
